crates/plotnik-lib/tests/03-analyze/direct_recursion/no_escape_in_tree_child.txt
E = (call (E))
------------------ DIAGNOSTICS -------------------
error: infinite recursion: no escape path
 --> query.ptk:1:12
  |
1 | E = (call (E))
  |            ^
  |            |
  |            E references itself
  |
help: add a non-recursive branch to terminate: `[Base: ... Rec: (Self)]`
-------------------- SYMBOLS ---------------------
E
  E (cycle)
